# cowsay_django

./: .gitignore  README.md  pyproject.toml
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/: history.html  index.html
project/: settings.py  urls.py
