[tool.poetry]
name = "django_cowsay"
version = "0.1.0"
description = ""
authors = ["Jaspal Singh <jsinghw94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
cowsay = "^2.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
